force-app/main/default/objects/Product__c/fields/Device_Compatible__c.field-meta.xml
<CustomField>
    <fullName>Device_Compatible__c</fullName>
    <label>מותאם למכשירים</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SE+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>