force-app/main/default/objects/Product__c/fields/WebAvailable__c.field-meta.xml
<CustomField>
    <fullName>WebAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>זמין לרכישה באתר</label>
    <type>Checkbox</type>
</CustomField>