force-app/main/default/objects/Product__c/fields/WebDescription__c.field-meta.xml
<CustomField>
    <fullName>WebDescription__c</fullName>
    <label>פרטי מוצר באתר</label>
    <type>TextArea</type>
</CustomField>