force-app/main/default/objects/Product__c/fields/WebName__c.field-meta.xml
<CustomField>
    <fullName>WebName__c</fullName>
    <label>שם באתר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>